# beginner-ai-projects

./: .gitignore  README.md
project-01-ai-agent/: .env.example  README.md  main.py  pyproject.toml
project-02-study-buddy/: README.md  main.py  pyproject.toml
project-02-study-buddy/memory/: user_profile.json
project-03-flashcards-ui/: README.md  agent.py  app.py  main.py  pyproject.toml  storage.py
